# practice_django

./: .gitignore  pyproject.toml
app/: db.sqlite3
app/app/: settings.py  urls.py
wiki/GENERIC/generic/: mkdocs.yml
wiki/GENERIC/generic/docs/: django_docs.md  project_development_history.md
